    - Test surface.set_tiles
    - Hide quality indicator (why would you even build them with quality?)
    - Floor the heat pipe position to a tile position
    - Force the chunks to generate and _then_ call set_tile
    - Run a bunch of surface tile setting tests
    - Stash thinksies
    - Stash overnight draft
    - Test the undo functions
    - Test redo when visiting the hidden surface
    - Mention when switching the active surface
    - Document player surface visiting side effects
    - Switch between concrete and out-of-map
    - Use the ugly heat interface sprite for the connector
    - Give the radar a texture and translation
    - Rename connector to interface and place it
    - Move both entities and their items/recipes to their own files
    - Fix interface blueprinting
    - Allow the interface to float on the fluid
    - Draft the initial network recalculation code
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 11. 29
  Info:
    - Setup thumbnail and locale
    - Fork the offshore pump
    - Allow building tiles over the undersea cable
    - Dip my toes into pathfinding
    - Get a positive pathfinder result
    - Place the heat pipes down
    - Try to deal with diagonal gaps
    - Attempt to improve diagonal connectivity
    - Still fail to get it right for all directions
    - Automated attempt 1
    - Even more broken attempt
    - Why does this not work either
    - Also does not work
    - Nothing bloody works
    - Fall back to some hand written stuff
    - I feel like i am onto something
    - This finally appears to work (but not for extreme distances)
    - Also broken
    - Sigh, also broken
    - if this does not work i am gonna do manual placement
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 29
  Info:
    - Initial commit